--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
+    "downshift": "^1.28.1",
     "express": "^4.16.2",
     "material-ui": "^1.0.0-beta.35",
     "razzle": "^0.8.12",
