--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start:prod": "NODE_ENV=production node build/server.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "material-ui": "^1.0.0-beta.35",
