--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2"
+  },
+  "devDependencies": {
+    "jest-get-type": "^22.1.0"
   }
 }
