--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "lodash": "^4.17.5",
     "material-ui": "^1.0.0-beta.35",
     "razzle": "^0.8.12",
     "react": "^16.2.0",
