--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "razzle start",
     "build": "razzle build",
     "test": "razzle test --env=jsdom",
-    "start:prod": "NODE_ENV=production node build/server.js"
+    "start:prod": "NODE_ENV=production node build/server.js",
+    "workers:scrape": "babel-node src/workers/scrape.js --presets es2015,stage-2"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -26,6 +27,9 @@
     "redux": "^3.7.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "jest-get-type": "^22.1.0"
   }
 }
