--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.2",
     "lodash": "^4.17.5",
     "material-ui": "^1.0.0-beta.35",
+    "moment": "^2.21.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
     "razzle": "^0.8.12",
