--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.2",
     "lodash": "^4.17.5",
     "material-ui": "^1.0.0-beta.35",
+    "mdi-svg": "^2.1.99",
     "moment": "^2.21.0",
     "pg": "^7.4.1",
     "pg-hstore": "^2.3.2",
@@ -30,6 +31,7 @@
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-svg": "^2.2.14",
     "redux": "^3.7.2",
     "sequelize": "^4.35.2",
     "sequelize-cli": "^4.0.0"
