add session and login

--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "bcrypt": "^1.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "connect-pg-simple": "^4.2.1",
     "dotenv": "^5.0.1",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "lodash": "^4.17.5",
     "material-ui": "^1.0.0-beta.35",
     "mdi-svg": "^2.1.99",
