--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "lodash": "^4.17.5",
+    "mailgun-js": "^0.16.0",
     "material-ui": "^1.0.0-beta.35",
     "mdi-svg": "^2.1.99",
     "moment": "^2.21.0",
