--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "juice": "^4.2.3",
     "lodash": "^4.17.5",
     "mailgun-js": "^0.16.0",
     "material-ui": "^1.0.0-beta.38",
