--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "razzle test --env=jsdom",
     "start:prod": "NODE_ENV=production node build/server.js",
     "workers:scrape": "babel-node src/workers/scrape.js --presets es2015,stage-2",
+    "workers:send": "babel-node src/workers/send.js --presets es2015,stage-2",
     "db:start": "docker run --name topsub-postgres -e POSTGRES_PASSWORD=mysecretpassword -d -p 5444:5432 postgres",
     "db:rm": "docker stop topsub-postgres && docker rm topsub-postgres"
   },
