--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "jss": "^9.8.1",
+    "jss-camel-case": "^6.1.0",
+    "jss-default-unit": "^8.0.2",
+    "jss-nested": "^6.0.1",
+    "jss-props-sort": "^6.0.0",
     "juice": "^4.2.3",
     "lodash": "^4.17.5",
     "mailgun-js": "^0.16.0",
@@ -36,6 +41,7 @@
     "razzle": "^0.8.12",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-jss": "^8.3.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-svg": "^2.2.15",
